Bug 45557 - Buttons > 16 might not be handled
Summary: Buttons > 16 might not be handled
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/wacom (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-02 10:20 UTC by Bastien Nocera
Modified: 2012-02-08 06:20 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Bastien Nocera 2012-02-02 10:20:42 UTC
The Cintiq 21UX2 has 16 buttons, and 2 touch rings (each touch ring is a scroll-wheel plus a button, so 3 buttons each), totalling 22 "mouse buttons".

The code in gnome-settings-daemon only seems to support 16, as does the X.org driver. Needs testing.
Comment 1 Jason Gerecke 2012-02-02 12:52:53 UTC
Buttons > 16 are sent properly from the Cintiq 21UX2. XEV shows the final button emitting button 22 as it should.

That said, buttons > 16 cannot be re-mapped to other buttons. "xsetwacom set <id> button 17 key a" continues to send button 17, while trying buttons 18 and higher produce an "Invalid offset into Wacom Button Actions property." error (since the property only contains 16 items, regardless of how many buttons are present).
Comment 3 Peter Hutterer 2012-02-08 06:20:37 UTC
commit 7e92aca68a666499c7d6f1946cc849cfb5653ae0
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Fri Feb 3 19:15:54 2012 +1000

    Initialize button action properties for the correct button number (#45557)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.