Initialize button action properties for the correct button number (#45557)

Previous code had the number of properties for button actions hardcoded to
16 (WCM_MAX_MOUSE_BUTTONS). Drop that define and instead initialize the same
number of properties that we have on the device as well.

X.Org Bug 45557 <http://bugs.freedesktop.org/show_bug.cgi?id=45557>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>
Reviewed-by: Chris Bagwell <chris@cnpbagwell.com>