src/xf86WacomDefs.h
@@ -188,12 +188,7 @@ struct _WacomModel
 #define DEFAULT_THRESHOLD (FILTER_PRESSURE_RES / 75)
 
 #define WCM_MAX_BUTTONS		32	/* maximum number of tablet buttons */
-#define WCM_MAX_MOUSE_BUTTONS	16	/* maximum number of buttons-on-pointer
-                                         * (which are treated as mouse buttons,
-                                         * not as keys like tablet menu buttons). 
-					 * For backward compability support,
-					 * tablet buttons besides the strips are
-					 * treated as buttons */
+
 #define AXIS_INVERT  0x01               /* Flag describing an axis which increases "downward" */
 #define AXIS_BITWISE 0x02               /* Flag describing an axis which changes bitwise */
 
